added prototype of admin UI

--- a/AT.Admin.UI/_Imports.razor
+++ b/AT.Admin.UI/_Imports.razor
@@ -8,3 +8,9 @@
 @using Microsoft.JSInterop
 @using AT.Admin.UI
 @using AT.Admin.UI.Shared
+@using AT.Admin.UI.Pages.Directors
+@using AT.Admin.UI.Pages.Films
+@using AT.Admin.UI.Pages.Genres
+@using AT.Admin.UI.Pages.FilmGenres
+@using AT.Admin.UI.Pages.SimilarFilms
+
