--- a/AT.Admin.UI/Shared/NavMenu.razor
+++ b/AT.Admin.UI/Shared/NavMenu.razor
@@ -10,18 +10,28 @@
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+            <NavLink class="nav-link" href="/Directors" Match="NavLinkMatch.All">
+                <span class="oi oi-person" aria-hidden="true"></span> @Routes.Directors
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="/Films">
+                <span class="oi oi-video" aria-hidden="true"></span> @Routes.Films
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="/Genres">
+                <span class="oi oi-tag" aria-hidden="true"></span> @Routes.Genres
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/FilmGenres">
+                <span class="oi oi-transfer" aria-hidden="true"></span> @Routes.FilmGenres
+            </NavLink>
+        </div>
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/SimilarFilms">
+                <span class="oi oi-transfer" aria-hidden="true"></span> @Routes.SimilarFilms
             </NavLink>
         </div>
     </nav>
