admin UI for director and FIlm done.

--- a/AT.Admin.UI/Pages/Films/FilmsPortal.razor
+++ b/AT.Admin.UI/Pages/Films/FilmsPortal.razor
@@ -1,12 +1,72 @@
 ﻿@inject IAdminService AdminService
-<h3>FilmsPortal</h3>
+
+@if (!string.IsNullOrEmpty(Alert))
+{
+    <div class="d-flex">
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <strong>@Alert</strong>
+            <button type="button" @onclick="CloseAlert" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
+}
+
+@if (Navigation == PageType.Create)
+{
+    <ChangeFilm Page="@Navigation" OnChange="OnChange"></ChangeFilm>
+}
+@if (Navigation == PageType.Delete || Navigation == PageType.Edit)
+{
+    <ChangeFilm Page="@Navigation" OnChange="OnChange" Model="Film"></ChangeFilm>
+}
+
+<div class="d-flex me-1">
+    <a href="/" class="btn btn-outline-secondary rounded-0 me-1">Home</a>
+    <button type="button" class="btn btn-outline-primary rounded-0 me-1" @onclick="()=>ChangePageType(PageType.Index)">Index</button>
+    <button type="button" class="btn btn-outline-success rounded-0" @onclick="()=>ChangePageType(PageType.Create)">Create</button>
+</div>
+
+<FilmsIndex OnClick="OnClick" Model="Model"></FilmsIndex>
 
 @code {
 	List<FilmDTO> Model = new();
+	string Alert { get; set; } = "";
+	string Navigation { get; set; } = PageType.Index;
+	public FilmDTO Film { get; set; } = new();
 
 	protected override async Task OnInitializedAsync()
 	{
-		//+++++++++++++++++metoder för att testa funktionalitet av AdminService+++++++++++++++++++++++++++++++++
+		Alert = "";
+		Model = await AdminService.GetAsync<FilmDTO>("films?freeOnly=false");
+	}
+
+	void ChangePageType(string pageType) => Navigation = pageType;
+
+	void CloseAlert() => Alert = "";
+
+	async Task OnClick(ClickModel model)
+	{
+		if (model.PageType.Equals(PageType.Edit) || model.PageType.Equals(PageType.Delete))
+			Film = await AdminService.SingleAsync<FilmDTO>($"films/{model.Id}") ?? new();
+
+		ChangePageType(model.PageType);
+	}
+
+	async Task OnChange(string alert)
+    {
+        try
+        {
+            Alert = alert;
+            Model = await AdminService.GetAsync<FilmDTO>("films");
+            ChangePageType(PageType.Index);
+        }
+        catch
+        {
+            Alert = "Couldn't create/edit/delete the film.";
+        }
+    }
+	//+++++++++++++++++metoder för att testa funktionalitet av AdminService+++++++++++++++++++++++++++++++++
+	//protected override async Task OnInitializedAsync()
+	//{		
 		//get metod
 		//Model = await AdminService.GetAsync<FilmDTO>("films?freeOnly=false");
 		//single get metod
@@ -38,7 +98,7 @@
 		//Model = await AdminService.GetAsync<FilmDTO>("films?freeOnly=false");
 		//delete metod
 		//await AdminService.DeleteAsync<FilmDTO>($"films/10");
-		//Model = await AdminService.GetAsync<FilmDTO>("films?freeOnly=false");
-		//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-	}
+		//Model = await AdminService.GetAsync<FilmDTO>("films?freeOnly=false");		
+	//}
+	//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 }
