--- a/AT.Admin.UI/Pages/Index.razor
+++ b/AT.Admin.UI/Pages/Index.razor
@@ -2,8 +2,5 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<h3>Hello, Admin of the AMAZING TIME!</h3>
+<h6>Welcome to the administrative side of our beautiful streaming service.</h6> 
