--- a/AT.Admin.UI/Pages/Directors/DirectorsPortal.razor
+++ b/AT.Admin.UI/Pages/Directors/DirectorsPortal.razor
@@ -1,4 +1,67 @@
-﻿<h3>DirectorsPortal</h3>
+﻿@inject IAdminService AdminService
+
+@if (!string.IsNullOrEmpty(Alert))
+{
+    <div class="d-flex">
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <strong>@Alert</strong>
+            <button type="button" @onclick="CloseAlert" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
+}
+
+@if (Navigation == PageType.Create)
+{
+	<ChangeDirector Page="@Navigation" OnChange="OnChange"></ChangeDirector>
+}
+@if (Navigation == PageType.Delete || Navigation == PageType.Edit)
+{
+	<ChangeDirector Page="@Navigation" OnChange="OnChange" Model="Director"></ChangeDirector>
+}
+
+<div class="d-flex me-1">
+	<a href="/" class="btn btn-outline-secondary rounded-0 me-1">Home</a>
+	<button type="button" class="btn btn-outline-primary rounded-0 me-1" @onclick="()=>ChangePageType(PageType.Index)">Index</button>
+	<button type="button" class="btn btn-outline-success rounded-0" @onclick="()=>ChangePageType(PageType.Create)">Create</button>
+</div>
+
+<DirectorsIndex OnClick="OnClick" Model="Model"></DirectorsIndex>
 
 @code {
+	List<DirectorDTO> Model = new();
+	string Alert { get; set; } = "";
+	string Navigation { get; set; } = PageType.Index;
+	public DirectorDTO Director { get; set; } = new();
+
+	protected override async Task OnInitializedAsync()
+	{
+		Alert = "";
+		Model = await AdminService.GetAsync<DirectorDTO>("directors");
+	}
+
+	void ChangePageType(string pageType) => Navigation = pageType;
+
+	void CloseAlert() => Alert = "";
+
+	async Task OnClick(ClickModel model)
+	{
+		if (model.PageType.Equals(PageType.Edit) || model.PageType.Equals(PageType.Delete))
+			Director = await AdminService.SingleAsync<DirectorDTO>($"directors/{model.Id}") ?? new();
+
+		ChangePageType(model.PageType);
+	}
+
+	async Task OnChange(string alert)
+	{
+		try
+		{
+			Alert = alert;
+			Model = await AdminService.GetAsync<DirectorDTO>("directors");
+			ChangePageType(PageType.Index);
+		}
+		catch
+		{
+			Alert = "Couldn't create/edit/delete the director.";
+		}
+	}
 }
