--- a/AT.Admin.UI/Pages/SimilarFilms/SimilarFilmsPortal.razor
+++ b/AT.Admin.UI/Pages/SimilarFilms/SimilarFilmsPortal.razor
@@ -1,5 +1,33 @@
-﻿<h3>SimilarFilmsPortal</h3>
+﻿@inject IAdminService AdminService
+
+@if (!string.IsNullOrEmpty(Alert))
+{
+	<div class="d-flex">
+		<div class="alert alert-danger alert-dismissible fade show" role="alert">
+			<strong>@Alert</strong>
+			<button type="button" @onclick="CloseAlert" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		</div>
+	</div>
+}
+
+<div class="d-flex me-1">
+	<a href="/" class="btn btn-outline-secondary rounded-0 me-1">Home</a>
+	<button type="button" class="btn btn-outline-primary rounded-0 me-1" @onclick="()=>ChangePageType(PageType.Index)">Index</button>
+	<button type="button" class="btn btn-outline-success rounded-0" @onclick="()=>ChangePageType(PageType.Create)">Create</button>
+</div>
 
 @code {
+	List<SimilarFilmsDTO> Model = new();
+	string Alert { get; set; } = "";
+	string Navigation { get; set; } = PageType.Index;
 
+	protected override async Task OnInitializedAsync()
+	{
+		Alert = "";
+		//Model = await AdminService.GetAsync<FilmDTO>("films?freeOnly=false");
+	}
+
+	void ChangePageType(string pageType) => Navigation = pageType;
+
+	void CloseAlert() => Alert = "";
 }
