--- a/AT.Admin.UI/Pages/Films/ChangeFilm.razor
+++ b/AT.Admin.UI/Pages/Films/ChangeFilm.razor
@@ -3,7 +3,7 @@
 <div class="d-xl-flex justify-content-center">
     <EditForm Model="@Model" OnValidSubmit="@OnFormSubmit" class="mb-5 border border-1 border-secondary p-2 w-25">
         <DataAnnotationsValidator />
-        <h4>@Page Course</h4>
+        <h4>@Page Film</h4>
         <div class="mb-3">
             @if (Page.Equals(PageType.Delete))
             {
