--- a/AT.Admin.UI/Pages/Genres/ChangeGenre.razor
+++ b/AT.Admin.UI/Pages/Genres/ChangeGenre.razor
@@ -3,7 +3,7 @@
 <div class="d-xl-flex justify-content-center">
     <EditForm Model="@Model" OnValidSubmit="@OnFormSubmit" class="mb-5 border border-1 border-secondary p-2 w-25">
         <DataAnnotationsValidator />
-        <h4>@Page Director</h4>
+        <h4>@Page Genre</h4>
         <div class="mb-3">
             @if (Page.Equals(PageType.Delete))
             {
@@ -21,7 +21,7 @@
 </div>
 
 @code {
-    [Parameter] public DirectorDTO Model { get; set; } = new();
+    [Parameter] public GenreDTO Model { get; set; } = new();
     [Parameter] public string Page { get; set; } = string.Empty;
     [Parameter] public EventCallback<string> OnChange { get; set; }
 
@@ -30,17 +30,17 @@
         try
         {
             if (Page.Equals(PageType.Create))
-                await AdminService.CreateAsync<DirectorDTO>("directors", Model);
+                await AdminService.CreateAsync<GenreDTO>("genres", Model);
             else if (Page.Equals(PageType.Edit))
-                await AdminService.EditAsync<DirectorDTO>($"directors/{Model.Id}", Model);
+                await AdminService.EditAsync<GenreDTO>($"genres/{Model.Id}", Model);
             else if (Page.Equals(PageType.Delete))
-                await AdminService.DeleteAsync<DirectorDTO>($"directors/{Model.Id}");
+                await AdminService.DeleteAsync<GenreDTO>($"genres/{Model.Id}");
 
             await OnChange.InvokeAsync("");
         }
         catch
         {
-            await OnChange.InvokeAsync("Couldn't create/edit/delete the director.");
+            await OnChange.InvokeAsync("Couldn't create/edit/delete the genre.");
         }
     }
 }
