--- a/AT.Admin.UI/Pages/Genres/GenresPortal.razor
+++ b/AT.Admin.UI/Pages/Genres/GenresPortal.razor
@@ -10,24 +10,58 @@
 	</div>
 }
 
+@if (Navigation == PageType.Create)
+{
+	<ChangeGenre Page="@Navigation" OnChange="OnChange"></ChangeGenre>
+}
+@if (Navigation == PageType.Delete || Navigation == PageType.Edit)
+{
+	<ChangeGenre Page="@Navigation" OnChange="OnChange" Model="Genre"></ChangeGenre>
+}
+
 <div class="d-flex me-1">
 	<a href="/" class="btn btn-outline-secondary rounded-0 me-1">Home</a>
 	<button type="button" class="btn btn-outline-primary rounded-0 me-1" @onclick="()=>ChangePageType(PageType.Index)">Index</button>
 	<button type="button" class="btn btn-outline-success rounded-0" @onclick="()=>ChangePageType(PageType.Create)">Create</button>
 </div>
 
+<GenresIndex OnClick="OnClick" Model="Model"></GenresIndex>
+
 @code {
 	List<GenreDTO> Model = new();
 	string Alert { get; set; } = "";
 	string Navigation { get; set; } = PageType.Index;
+	public GenreDTO Genre { get; set; } = new();
 
 	protected override async Task OnInitializedAsync()
 	{
 		Alert = "";
-		//Model = await AdminService.GetAsync<FilmDTO>("films?freeOnly=false");
+		Model = await AdminService.GetAsync<GenreDTO>("genres");
 	}
 
 	void ChangePageType(string pageType) => Navigation = pageType;
 
 	void CloseAlert() => Alert = "";
+
+	async Task OnClick(ClickModel model)
+	{
+		if (model.PageType.Equals(PageType.Edit) || model.PageType.Equals(PageType.Delete))
+			Genre = await AdminService.SingleAsync<GenreDTO>($"genres/{model.Id}") ?? new();
+
+		ChangePageType(model.PageType);
+	}
+
+	async Task OnChange(string alert)
+	{
+		try
+		{
+			Alert = alert;
+			Model = await AdminService.GetAsync<GenreDTO>("genres");
+			ChangePageType(PageType.Index);
+		}
+		catch
+		{
+			Alert = "Couldn't create/edit/delete the genre.";
+		}
+	}
 }
