Small changes in layout

--- a/AT.Membership.UI/Pages/VideoPlayer.razor
+++ b/AT.Membership.UI/Pages/VideoPlayer.razor
@@ -4,7 +4,7 @@
 <a class="btn btn-primary rounded-0 mb-1" href="film/@Model.Id">
     <i class="oi oi-arrow-left"></i><span class="vertical-align"> Back to @Model.Title overview</span>
 </a>
-<div class="d-flex flex-column" style="max-width:1024px;">
+<div class="d-flex flex-column" style="max-width:1920;">
 
     <div class="card flex-fill rounded-0">
         @if (Model.FilmUrl != null)
