Cut one big razor component into a few smaller razor components which controlsone card or function each

--- a/AT.Membership.UI/Pages/Film.razor
+++ b/AT.Membership.UI/Pages/Film.razor
@@ -6,8 +6,17 @@
 <a class="btn btn-primary rounded-0 mb-1" href="/">
 	<i class="oi oi-arrow-left"></i><span class="vertical-align"> Back to Dashboard</span>
 </a>
+<div class="row">
+	<div class="col">
+		<FilmStarter Film ="@Model"></FilmStarter>
+		<FilmDetails Film="@Model"></FilmDetails>
+		<SimilarFilmCard Film="@Model"></SimilarFilmCard>
+	</div>
+	<div class="col">
+		<FilmPoster Film="@Model"></FilmPoster>
+		</div>
+</div>
 
-<Marquee Film="@Model"></Marquee>
 
 @code {
 	[Parameter] public int? Id { get; set; }
